[gd_scene load_steps=6 format=3 uid="uid://dski6a7fmhjyq"]

[ext_resource type="Texture2D" uid="uid://divs23sseckni" path="res://Assets/Sprites/Owen Art/Currency Pile.png" id="1_fjwmd"]
[ext_resource type="Script" uid="uid://b4asxnn3kulud" path="res://Scripts/coin.gd" id="1_ixiiq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l8qws"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ixiiq"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_whwud"]
radius = 2.0

[node name="Coin" type="RigidBody2D"]
collision_layer = 0
script = ExtResource("1_ixiiq")

[node name="Area2D2" type="Area2D" parent="."]
scale = Vector2(1.5, 1.5)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
scale = Vector2(0.6666667, 0.6666667)
shape = SubResource("CircleShape2D_l8qws")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_ixiiq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.5, -0.5)
texture = ExtResource("1_fjwmd")
hframes = 4

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(1.5, 1.5)

[node name="DetectionZone" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_whwud")

[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
